# Road-network-inspection-with-Drones-in-Continuous-space_example_generate

./: .gitignore  ALNS_PSO_UAV.py  Algorithm.md  Giant_Heuristic.py  LargeInstanceGenerate.py  Practical_Instance_Extract.py  README.md  RunBenchmark.py  SmallMediumInstanceGenerate.py  generate_charts.py  optimize_5points.py
Cplus/: CMakeLists.txt  call_cpp.py
Cplus/include/: functions.h  types.h
Cplus/src/: alns_operators.cpp  core.cpp  initial_solution.cpp  main.cpp  parallel.cpp  parser.cpp  pso.cpp  split_dp.cpp
算例/: 说明.txt
算例/中等规模算例/: 16-22-2-2-(0).txt  16-22-2-4-(0).txt  16-22-2-5-(0).txt
算例/大规模算例/: 21-31-2-1-(0).txt  26-40-2-4-(0).txt  26-40-2-5-(0).txt
算例/小中规模算例/: 21-31-2-2-(0).txt  21-31-2-3-(0).txt  21-31-2-5-(0).txt  26-40-2-3-(0).txt  5-4-2-1-(0).txt  5-4-2-2-(0).txt  5-4-2-3-(0).txt  5-4-2-4-(0).txt  5-4-2-5-(0).txt  6-5-2-1-(0).txt  6-5-2-1-(1).txt  6-5-2-2-(0).txt  6-5-2-3-(0).txt  6-5-2-3-(2).txt  6-5-2-4-(1).txt  6-5-2-4-(2).txt  6-5-2-5-(0).txt  7-7-2-1-(0).txt  7-7-2-1-(1).txt  7-7-2-2-(0).txt  7-7-2-2-(1).txt  7-7-2-2-(2).txt  7-7-2-3-(0).txt  7-7-2-3-(1).txt  7-7-2-3-(2).txt  7-7-2-4-(0).txt  7-7-2-4-(1).txt  7-7-2-5-(0).txt  7-7-2-5-(1).txt  7-7-2-5-(2).txt  8-8-2-1-(0).txt  8-8-2-2-(0).txt  8-8-2-3-(1).txt  8-8-2-4-(0).txt  8-8-2-4-(1).txt  8-8-2-5-(0).txt  8-8-2-5-(2).txt
算例/小规模算例/: 5-4-2-2-(0).txt  5-4-2-5-(0).txt  5-5-2-3-(0).txt  6-5-2-1-(0).txt  6-5-2-3-(0).txt  6-5-2-4-(0).txt  6-5-2-5-(0).txt
算例/随机算例/: 5-3-1(0)-VarFlie.txt  5-3-1(0).ilp  5-3-1(0).lp  (+7 more)
结果/: 实际算例求解结果_大规模.csv  随机算例求解结果_中等规模.csv  随机算例求解结果_大规模.csv  随机算例求解结果_小规模.csv
(+3240 files in other folders)
